# multithreaded

./: CMakeLists.txt  main.cpp
src/containers/: memoryblock.h  queue.h  stack.h  vector.h
src/multit/: accumulate.h
src/profiling/: logduration.h  stopwatch.h
src/templates/: tarithmeticable.h
